schema/testdata/errors/reserved_field_name_created_at.keel
model User {
    fields {
        //expect-error:9:18:E006:Cannot use 'createdAt' as it already exists as a built-in field
        createdAt Text
    }
}
